--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EduQuery</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Ask about your course!</h1>
-  <input type="text" id="question" placeholder="e.g. What time is the class?" size="60" />
-  <button onclick="askQuestion()">Ask</button>
-  <p id="response"></p>
+  <div class="container">
+    <h1>EduQuery</h1>
+    <p class="subheading">Ask your syllabus anything 👩‍🏫📘</p>
+
+    <input type="text" id="question" placeholder="e.g. What time is the class?" />
+    <button onclick="askQuestion()">Ask</button>
+
+    <div id="response"></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
